# ScholarScout

./: .gitignore  CONTEXT.md  README.en.md  README.md  README.zh.md  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  config.py  database.py  dependencies.py  logging_config.py  main.py  models.py  models_db.py  pyproject.toml  scheduler.py  sentry_config.py
backend/alembic/: env.py
backend/alembic/versions/: 33266138fe5e_initial_schema.py
backend/routers/: auth.py  feedback.py  paper.py  search.py  semantic.py  subscriptions.py  user.py  ws_router.py
backend/services/: auth_service.py  cache_service.py  download_service.py  email_service.py  llm_service.py  pdf_finder_service.py  search_service.py  vector_service.py  ws_manager.py
backend/tests/: conftest.py  test_auth.py  test_auth_service.py  test_download_service.py  test_feedback.py  test_forgot_password.py  test_llm_service.py  test_search_service.py  test_semantic.py  test_sessions.py  test_subscriptions.py  test_user.py
context/: progress.md
deploy/: deploy.sh  nginx.conf  scholarscout-backend.service  setup.sh  setup_umami.sh  umami-compose.yml
docs/: backlog.md
docs/superpowers/plans/: 2026-04-25-scholarscout-v1.md  2026-05-11-phase1-auth-collections.md
docs/superpowers/specs/: 2026-05-11-phase1-auth-collections-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthModal.tsx  ChatPanel.tsx  ComparePanel.tsx  FeedbackWidget.tsx  KeySetupScreen.tsx  MainLayout.tsx  MessageBubble.tsx  PaperCard.tsx  PaperCardSkeleton.tsx  PaperChatDrawer.tsx  PaperGraphPanel.tsx  RagChatPanel.tsx  RedPandaWidget.tsx  ResetPasswordModal.tsx  ResultsPanel.tsx  SemanticSearchPanel.tsx  Toast.tsx  UserMenu.tsx
scripts/: screenshot.mjs
(+13 files in other folders)
