[project]
name = "scholarscout-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "openai==1.51.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "feedparser>=6.0.12",
    "scholarly>=1.7.11",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "email-validator",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.0,<4.0",
    "aiosmtplib>=3.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
